--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:ignore="GoogleAppIndexingWarning">
 
         <activity
-            android:name=".HelloArActivity"
+            android:name=".ArTradeActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize"
             android:exported="true"
